--- a/app/views/default.html
+++ b/app/views/default.html
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="/assets/route/default/core/css/animate.css">
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/tiny-slider.css"> -->
     <!-- <link rel="stylesheet" href="/assets/route/default/core/css/glightbox.min.css"> -->
-    <link rel="stylesheet" href="/assets/route/default/core/css/main.css?v=040523">
-    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=301023">
+    <link rel="stylesheet" href="/assets/route/default/core/css/main.css?v=171123">
+    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=171123">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
 </head>
@@ -225,7 +225,7 @@
     <!-- <script src="/assets/route/default/core/js/count-up.min.js"></script> -->
     <script src="/assets/route/default/core/js/main.js"></script>
     <!-- Core Script -->
-    <script src="/assets/route/default/core/js/default.js?v=290522"></script>
+    <script src="/assets/route/default/core/js/default.js?v=1711231"></script>
     <script src="/assets/route/auth/js/auth.js?v=160723"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
