--- a/public/assets/route/default/core/css/main.css
+++ b/public/assets/route/default/core/css/main.css
@@ -1195,8 +1195,8 @@ ol {
   font-size: 14px;
   color: #fff !important;
   position: fixed;
-  bottom: 30px;
-  right: 30px;
+  bottom: 12px;
+  right: 12px;
   z-index: 9;
   cursor: pointer;
   -webkit-transition: all .3s ease-out 0s;
@@ -1210,6 +1210,14 @@ ol {
   -webkit-transform: translate3d(0, -5px, 0);
   transform: translate3d(0, -5px, 0);
   background-color: #fd723b;
+}
+
+@media only screen and (min-width: 768px) {
+  /* One Click Scrool Top Button*/
+  .scroll-top {
+    bottom: 30px;
+    right: 30px;
+  }
 }
 
 /* Overlay */
