menyesuaikan keinginnan warna btn share dan menghilangkan console.log pada tentang-kami

--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -102,9 +102,9 @@
                     <div class="col-12 d-flex gap-3">
                         <a href="<?= '/donasi/buat/baru/'. $data['detil_bantuan']->id_bantuan; ?>"
                             class="btn button donasi btn-lg w-100 shadow-none d-grid align-items-center justify-items-center">Donasi Sekarang</a>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#modalShareBtn" class="btn d-flex fw-bold flex-column-reverse fs-6 button button-outline-orange">
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modalShareBtn" class="btn d-flex fw-bold flex-column-reverse fs-6 button btn-outline-orange-reverse">
                             Bagikan
-                            <i class="lni lni-share fs-6"></i>
+                            <i class="bi bi-share-fill fs-6"></i>
                         </a>
                     </div>
                     <?php } ?>
