memperbaiki bug overflow pada animasi liked donatur-area dengan memberikan overflow pada #detil-banner-area

--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -1,4 +1,4 @@
-<div id="detil-banner-area">
+<div id="detil-banner-area" class="overflow-hidden">
     <div class="container">
         <div class="row" id="visual-banner-area">
             <div class="col">
