menambahkan rekening mandiri

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -223,7 +223,7 @@
     <script src="/vendors/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
     <!-- Core Script -->
     <script src="/assets/route/auth/js/auth.js?v=110123"></script>
-    <script src="/assets/main/js/main.js"></script>
+    <script src="/assets/main/js/main.js?v=112023"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
     <!-- Argon JS -->
