--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -292,6 +292,34 @@
                     </div>
                 </div>
             </div>
+            <div class="col-12 col-md-6 card p-0 bg-gradient-gray text-white overflow-hidden" data-cp="bank-mandiri">
+                <div class="card-body p-3 d-flex flex-column justify-content-between">
+                    <div class="row g-0">
+                        <div class="col saldo">
+                            <small class="text-white-50 font-weight-bolder">Saldo Donasi Via Mandiri</small>
+                            <div>
+                                <?= Output::tSparator($data['saldo_donasi']->saldo_mandiri); ?>
+                            </div>
+                        </div>
+                        <div class="col-3 logo-cp">
+                            <img src="/assets/images/partners/mandiri.png" alt="Mandiri" class="img-fluid img-center">
+                        </div>
+                    </div>
+                    <div class="row g-0 align-items-end">
+                        <div class="col">
+                            <h6 class="text-white m-0">
+                                <div>POJOK BERBAGI INDONESIA</div>
+                                <div class="font-weight-300">
+                                    <?= $data['saldo_donasi']->nomor_mandiri; ?>
+                                </div>
+                            </h6>
+                        </div>
+                        <div class="col-3">
+                            <img src="/assets/images/partners/gpn-white.png" alt="GPN" class="img-fluid img-center">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="col-12 col-md-6 card p-0 bg-white overflow-hidden" data-cp="tunai" style="display: grid;">
                 <div class="card-body p-3 d-flex flex-column justify-content-between">
                     <div class="row g-0">
