--- a/public/assets/route/admin/pages/css/donasi.css
+++ b/public/assets/route/admin/pages/css/donasi.css
@@ -7,6 +7,7 @@ table .avatar {
 .card table .media img[alt="bank-bjb"],
 .card table .media img[alt="bank-bsi"],
 .card table .media img[alt="bank-bri"],
+.card table .media img[alt="bank-mandiri"]
 .card table .media img[alt="qris"],
 .card table .media img[alt="BJB"],
 .card table .media img[alt="BSI"],
@@ -59,6 +60,21 @@ table .avatar {
 .card.overflow-hidden[data-cp="bank-bri"]>.strip-top {
   width: 180px;
   transform: skewX(20deg) translateX(50px);
+}
+
+.card.overflow-hidden[data-cp="bank-mandiri"]::before {
+    background-image: url(/assets/svg/indonesia.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    opacity: .5;
 }
 
 .card img[alt="GPN"] {
