--- a/public/assets/main/css/utility.css
+++ b/public/assets/main/css/utility.css
@@ -202,6 +202,27 @@
     background: linear-gradient(to bottom, transparent, #fff);
 }
 
+/* loader-animation */
+.loader-animation::after {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    content: 'Sedang memuat data';
+    width: 200px;
+    height: auto;
+    display: grid;
+    place-items: center;
+    font-size: 1em;
+    font-weight: 800;
+    background-color: var(--orange);
+    color: white;
+    padding: .5em;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+}
+
 @media (min-width: 425px) {
 
     .modal .d-flex.buttons {
