memperbaiki bug z-index detil donasi btn on mobile dan memperbaiki modal header style pada list donatur

--- a/app/views/admin/bantuan/index.html
+++ b/app/views/admin/bantuan/index.html
@@ -204,7 +204,7 @@
                                     <b>
                                         <?= $data_bantuan->total_penggunaan_donasi; ?>
                                     </b>
-                                    <div class="small badge badge-primary text-black-50 text-capitalize">
+                                    <div class="small badge badge-primary text-black-50 text-capitalize font-weight-bolder">
                                         <?= $data_bantuan->sekian_kali_pelaksanaan; ?> Pelaksanaan
                                     </div>
                                 </div>
