--- a/app/views/default/bantuan/detil.html
+++ b/app/views/default/bantuan/detil.html
@@ -102,8 +102,8 @@
                     <div class="col-12 d-flex gap-3">
                         <a href="<?= '/donasi/buat/baru/'. $data['detil_bantuan']->id_bantuan; ?>"
                             class="btn button donasi btn-lg w-100 shadow-none d-grid align-items-center justify-items-center">Donasi Sekarang</a>
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#modalShareBtn" class="btn d-flex fw-bold flex-column-reverse fs-6 button btn-outline-orange-reverse">
-                            Bagikan
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#modalShareBtn" class="btn d-flex fw-bold flex-column-reverse fs-6 button btn-outline-orange-reverse justify-content-center">
+                            <span>Bagikan</span>
                             <i class="bi bi-share-fill fs-6"></i>
                         </a>
                     </div>
@@ -210,7 +210,7 @@
         <div class="modal-content">
             <div class="modal-header justify-content-center border-0">
                 <div class="row m-0 justify-content-center w-100">
-                    <div class="col-12 col-lg-6 d-flex justify-content-between align-items-center">
+                    <div class="col-12 col-lg-6 d-flex justify-content-between align-items-center px-0">
                         <h5 class="modal-title">Daftar Donatur</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
