memperbaiki waktu menampilkan pembuatan donasi pada saat verivikasi donasi, memperbaharui kelola donasi di database, pembaharuan terhadap file verivikasi-donasi dan fetch admin untuk update pengesah saat verivikasi dilakukan

--- a/app/views/admin/donasi/index.html
+++ b/app/views/admin/donasi/index.html
@@ -419,7 +419,7 @@
                         <div class="box rounded-box bg-orange">
                             <div class="row align-items-center px-2">
                                 <div class="col-auto">
-                                    <img src="/female-avatar.jpg" alt="Female" class="avatar avatar-lg rounded-circle"
+                                    <img src="/assets/images/default.png" alt="avatar" class="avatar avatar-lg rounded-circle bg-white"
                                         id="donatur-avatar">
                                 </div>
                                 <div class="col">
